[project]
name = "whatsapp_automation_pro"
authors = [
    { name = "NexGen Enterprises", email = "nexgenerptechnologies@gmail.com" }
]
description = "Advanced WhatsApp Marketing and Automation Connector"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "requests"
]

[tool.bench]
app_title = "WhatsApp Automation Pro"
app_publisher = "NexGen Enterprises"
app_description = "Advanced WhatsApp Marketing and Automation Connector"
app_icon = "octicon octicon-device-mobile"
app_color = "green"
app_email = "nexgenerptechnologies@gmail.com"
app_license = "MIT"
