[project]
name = "whatsapp_automation_pro"
authors = [
    { name = "NexGen Enterprises", email = "nexgenerptechnologies@gmail.com" }
]
description = "Advanced WhatsApp Marketing and Automation Connector"
version = "1.0.0"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "requests",
    "frappe>=15.0.0,<16.0.0"
]

[tool.bench]
app_title = "WhatsApp Automation Pro"
app_publisher = "NexGen Enterprises"
app_description = "Advanced WhatsApp Marketing and Automation Connector"
app_icon = "octicon octicon-device-mobile"
app_color = "green"
app_email = "nexgenerptechnologies@gmail.com"
app_license = "MIT"

# This fixes the Marketplace Error
frappe_version = ">=15.0.0 <16.0.0"
required_apps = ["frappe>=15.0.0 <16.0.0"]
