[project]
name = "whatsapp_automation_pro"
authors = [
    { name = "NexGen Enterprises", email = "nexgenerptechnologies@gmail.com" }
]
description = "Advanced WhatsApp Marketing and Automation Connector"
readme = "README.md"
requires-python = ">=3.10"
version = "1.0.0"

dependencies = [
    "requests"
]

[tool.bench]
app_title = "WhatsApp Automation Pro"
app_publisher = "NexGen Enterprises"
app_description = "Automate ERPNext via WhatsApp! Zero per-message fees, no official API needed. Includes dynamic triggers & a pro chatbot builder."
app_icon = "octicon octicon-device-mobile"
app_color = "green"
app_email = "nexgenerptechnologies@gmail.com"
app_license = "MIT"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0, <=16.0.0"
